# WeatherApp

./: .gitignore  CMakeLists.txt  LICENSE  MusaWeatherApp.filters  MusaWeatherApp.sln  MusaWeatherApp.vcxproj  README.md  favorites.txt  imgui.ini
MusaWeatherApp/x64/Debug/: MusaWeatherApp.exe.recipe
MusaWeatherApp/x64/Debug/MusaWeatherApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MusaWeatherApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: MusaWeatherApp.h
src/: MusaWeatherApp.cpp  main.cpp
x64/Debug/: favorites.txt  imgui.ini
